--- a/devtrack/pom.xml
+++ b/devtrack/pom.xml
@@ -39,6 +39,11 @@
     		<artifactId>opencsv</artifactId>
     		<version>5.7.1</version> <!-- Or the latest version -->
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 
 
 		<dependency>
