--- a/devtrack/src/main/resources/application.properties
+++ b/devtrack/src/main/resources/application.properties
@@ -1,3 +1,19 @@
-spring.profiles.active=h2
+spring.profiles.active=dev
 
 spring.application.name=devtrack
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/devtrack?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=Kuna1998
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
+# spring.datasource.data=classpath:data.sql
+# spring.sql.init.continue-on-error=true
