--- a/devtrack/src/main/resources/application-dev.properties
+++ b/devtrack/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/devtrack?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Kuna1998
+spring.datasource.password=adit2264
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
