--- a/devtrack/src/main/resources/application-dev.properties
+++ b/devtrack/src/main/resources/application-dev.properties
@@ -11,3 +11,11 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
  spring.datasource.data=classpath:data.sql
  spring.sql.init.continue-on-error=true
+ 
+ spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.type=redis
+
+# application.properties
+logging.level.org.springframework.cache=TRACE
+logging.level.org.springframework.data.redis=DEBUG
